--- a/roles/microk8s/istio/files/default-gateway.yaml
+++ b/roles/microk8s/istio/files/default-gateway.yaml
@@ -21,3 +21,9 @@ spec:
         mode: PASSTHROUGH
       hosts:
         - '*.dev.local'
+    - port:
+        number: 1883
+        name: mqtt
+        protocol: TCP
+      hosts:
+        - '*.dev.local'
