--- a/roles/kafka/files/values.yaml
+++ b/roles/kafka/files/values.yaml
@@ -3,6 +3,10 @@ cp-zookeeper:
   url: zookeeper-headless
 
 cp-kafka:
+  nodeport:
+    enabled: true
+    servicePort: 19092
+    firstListenerPort: 31090
   cp-zookeeper:
     enabled: false
     url: zookeeper-headless
@@ -17,6 +21,10 @@ cp-kafka:
     requests:
       cpu: 100m
       memory: 512M
+  configurationOverrides:
+    'offsets.topic.replication.factor': '3'
+    'advertised.listeners': |-
+      EXTERNAL://${HOST_IP}:$((31090 + ${KAFKA_BROKER_ID}))
 
 cp-kafka-connect:
   resources:
