--- a/roles/dashboard/templates/virtual-service.yaml
+++ b/roles/dashboard/templates/virtual-service.yaml
@@ -1,20 +1,20 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: jupyterhub
+  name: dashboard
   namespace: default
 spec:
   hosts:
-    - jupyter.dev.local
+    - 'dashboard.{{ hostname }}'
   gateways:
     - default-gateway
   tls:
     - match:
         - port: 443
           sniHosts:
-            - jupyter.dev.local
+            - 'dashboard.{{ hostname }}'
       route:
         - destination:
-            host: proxy-public
+            host: kubernetes-dashboard
             port:
               number: 443
