--- a/roles/hdfs/templates/virtual-service.yaml
+++ b/roles/hdfs/templates/virtual-service.yaml
@@ -1,16 +1,16 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: spark
+  name: hdfs
   namespace: default
 spec:
   hosts:
-    - spark.dev.local
+    - 'hdfs.{{ hostname }}'
   gateways:
     - default-gateway
   http:
     - route:
         - destination:
             port:
-              number: 80
-            host: spark-master-svc
+              number: 50070
+            host: hdfs
