--- a/roles/influxdata/influxdb/templates/virtual-service.yaml
+++ b/roles/influxdata/influxdb/templates/virtual-service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   hosts:
-    - influxdb.dev.local
+    - 'influxdb.{{ hostname }}'
   gateways:
     - default-gateway
   http:
