--- a/roles/jupyter-hub/templates/virtual-service.yaml
+++ b/roles/jupyter-hub/templates/virtual-service.yaml
@@ -1,20 +1,20 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: dashboard
+  name: jupyterhub
   namespace: default
 spec:
   hosts:
-    - dashboard.dev.local
+    - 'jupyter.{{ hostname }}'
   gateways:
     - default-gateway
   tls:
     - match:
         - port: 443
           sniHosts:
-            - dashboard.dev.local
+            - 'jupyter.{{ hostname }}'
       route:
         - destination:
-            host: kubernetes-dashboard
+            host: proxy-public
             port:
               number: 443
