--- a/roles/spark/templates/virtual-service.yaml
+++ b/roles/spark/templates/virtual-service.yaml
@@ -1,16 +1,16 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: nifi
+  name: spark
   namespace: default
 spec:
   hosts:
-    - nifi.dev.local
+    - 'spark.{{ hostname }}'
   gateways:
     - default-gateway
   http:
     - route:
         - destination:
             port:
-              number: 8080
-            host: nifi
+              number: 80
+            host: spark-master-svc
