--- a/roles/kafka/files/values.yaml
+++ b/roles/kafka/files/values.yaml
@@ -3,6 +3,7 @@ cp-zookeeper:
   url: zookeeper-headless
 
 cp-kafka:
+  brokers: 1
   nodeport:
     enabled: true
     servicePort: 19092
@@ -22,7 +23,7 @@ cp-kafka:
       cpu: 100m
       memory: 512M
   configurationOverrides:
-    'offsets.topic.replication.factor': '3'
+    'offsets.topic.replication.factor': '1'
     'advertised.listeners': |-
       EXTERNAL://${HOST_IP}:$((31090 + ${KAFKA_BROKER_ID}))
 
@@ -55,7 +56,17 @@ cp-schema-registry:
       memory: 512M
 
 cp-kafka-rest:
-  enabled: false
+  enabled: true
+  resources:
+    limits:
+      cpu: 100m
+      memory: 128Mi
+    requests:
+      cpu: 100m
+      memory: 128Mi
+  cp-zookeeper:
+    enabled: false
+    url: zookeeper-headless
 
 cp-ksql-server:
   enabled: false
