Minor fixes and kafka rest istio vs added

--- a/roles/kafka/files/values.yaml
+++ b/roles/kafka/files/values.yaml
@@ -59,8 +59,8 @@ cp-kafka-rest:
   enabled: true
   resources:
     limits:
-      cpu: 100m
-      memory: 128Mi
+      cpu: 1Gi
+      memory: 512Mi
     requests:
       cpu: 100m
       memory: 128Mi
