--- a/roles/kafka/vars/main.yaml
+++ b/roles/kafka/vars/main.yaml
@@ -34,7 +34,15 @@ connector_configs:
       'transforms.convert_m30DF.target.type': 'Timestamp'
       'transforms.convert_m30DF.field': 'm30DataFine'
       'transforms.convert_m30DF.format': 'yyyy-MM-dd HH:mm:ss'
-      'connection.url': 'http://elasticsearch-master:9200'
+      'connection.url': 'https://elasticsearch-master:9200'
+      'connection.username': 'elastic'
+      'connection.password': 'elastic'
+      'elastic.security.protocol': 'SSL'
+      'elastic.https.ssl.keystore.location': '/usr/local/certificates/elastic-certificates.p12'
+      'elastic.https.ssl.keystore.type': 'JKS'
+      'elastic.https.ssl.truststore.location': '/usr/local/certificates/elastic-certificates.p12'
+      'elastic.https.ssl.truststore.type': 'JKS'
+      'elastic.https.ssl.protocol': 'TLS'
       'key.ignore': 'true'
       'type.name': 'doc'
       'value.converter.schema.registry.url': 'http://confluent-cp-schema-registry:8081'
