--- a/roles/kafka/files/values.yaml
+++ b/roles/kafka/files/values.yaml
@@ -15,55 +15,36 @@ cp-kafka:
     enabled: true
     size: 5Gi
     storageClass: microk8s-hostpath
-  resources:
-    limits:
-      cpu: 1000m
-      memory: 512M
-    requests:
-      cpu: 100m
-      memory: 512M
   configurationOverrides:
     'offsets.topic.replication.factor': '1'
     'advertised.listeners': |-
       EXTERNAL://${HOST_IP}:$((31090 + ${KAFKA_BROKER_ID}))
 
 cp-kafka-connect:
-  resources:
-    limits:
-      cpu: 1000m
-      memory: 512M
-    requests:
-      cpu: 100m
-      memory: 512M
+  customEnv:
+    CUSTOM_SCRIPT_PATH: /etc/scripts/create-connectors.sh
+  configurationOverrides:
+    'internal.key.converter': 'org.apache.kafka.connect.json.JsonConverter'
+    'internal.value.converter': 'org.apache.kafka.connect.json.JsonConverter'
+    'config.storage.replication.factor': '1'
+    'offset.storage.replication.factor': '1'
+    'status.storage.replication.factor': '1'
   volumeMounts:
     - name: create-connectors
       mountPath: /etc/scripts
+    - name: elastic-certificates
+      mountPath: /usr/local/certificates
   volumes:
     - name: create-connectors
       configMap:
         name: create-connectors
         defaultMode: 0777
-  customEnv:
-    CUSTOM_SCRIPT_PATH: /etc/scripts/create-connectors.sh
-
-cp-schema-registry:
-  resources:
-    limits:
-      cpu: 1000m
-      memory: 512M
-    requests:
-      cpu: 100m
-      memory: 512M
+    - name: elastic-certificates
+      secret:
+        secretName: elastic-certificates
+        defaultMode: 0777
 
 cp-kafka-rest:
-  enabled: true
-  resources:
-    limits:
-      cpu: 1000m
-      memory: 512Mi
-    requests:
-      cpu: 100m
-      memory: 128Mi
   cp-zookeeper:
     enabled: false
     url: zookeeper-headless
@@ -72,4 +53,5 @@ cp-ksql-server:
   enabled: false
 
 cp-control-center:
-  enabled: false
+  configurationOverrides:
+    'replication.factor': '1'
